# mealprep

./: .gitignore  Dockerfile  README.md  README_old.md  docker-compose.yml  example.env  init.sql  main.py  pyproject.toml
src/: main.py
src/mealprep/: insert_vectors.py  mcp_server.py  mcp_server_simple.py  mcp_test.py
src/mealprep.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mealprep/config/: settings.py
src/mealprep/db/: database.py  database_sqlite.py  models.py  vector_store.py
src/mealprep/helpers/: utils.py
src/mealprep/llm/: openai_client.py
src/mealprep/services/: meal_service.py
