[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mealprep"
version = "0.1.0"
description = "AI-powered meal planning assistant"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "anthropic>=0.57.1",
    "instructor>=1.9.0",
    "pandas>=2.3.0",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.1.1",
    "timescale-vector>=0.0.7",
    "pydantic>=2.12.0",
    "mcp>=1.20.0",
]

[tool.setuptools]
packages = ["mealprep"]

[tool.setuptools.package-dir]
"" = "src"
